# CudaHashSelection

./: .gitignore  Dictionary.h  HostHash.cu  HostHash.h  README.md  Timer.h
CPU/: CMakeLists.txt  HashSelection.cpp  HashSelection.cu  HashSelection.h  HashSelectionHost.cpp  HashSelectionHost.cu  HashSelectionHost.h  HostHash.h  OssException.h  TimeLogger.cpp  Utility.cu  Utility.h  Word.h  main.cpp  main.cu
Common/: CMakeLists.txt  DeviceDictionary.h  Dictionary.cpp  Dictionary.h  HashSelection.cpp  HashSelection.cu  HashSelection.h  HostHash.cpp  HostHash.h  MutationDictionary.cpp  MutationDictionary.cu  MutationDictionary.h  OssException.h  PasswordDictionary.cpp  PasswordDictionary.cu  PasswordDictionary.h  ReplacementDictionary.cpp  ReplacementDictionary.cu  ReplacementDictionary.h  ScreenWriter.cpp  ScreenWriter.h  TimeLogger.cu  TimeLogger.h  Timer.cpp  Timer.h  Utility.cpp  Utility.cu  Utility.h  Word.cpp  Word.cu  Word.h  WordBuffer.h
Common/ScreenWriting/: Console.h  ScreenWriter.cpp  ScreenWriter.h  Timer.cpp  Timer.h
Dictionaries/: 100.txt  10000-Truncated.txt  10000.txt  128.txt  256.txt
GPU/: Array.h  CMakeLists.txt  CudaException.h  CudaSpecification.h  DeviceFunctions.h  DeviceHash.cu  DeviceHash.h  DeviceStorage.h  HashSelection.cpp  HashSelection.cu  HashSelection.h  HashSelectionDevice.cu  HashSelectionDevice.h  StorageGPU.h  main.cpp  main.cu
GPU/DeviceDataStructures/: DeviceDictionary.h  DeviceFunctions.h  DeviceStack.h  DeviceVector.h  DeviceWord.h
GPU/HostToDeviceTransactions/: ArrayOnDevice.h  DictionaryOnDevice.cu  DictionaryOnDevice.h
Hash/: CMakeLists.txt  DeviceHash.cpp  DeviceHash.cu  DeviceHash.h  HostHash.cpp  HostHash.cu  HostHash.h  main.cpp
MutationsTest/: CMakeLists.txt  Dictionary.txt  Word.cpp  Word.h  main.cpp
PasswordPermutations/: CMakeLists.txt  ReplacementDictionary.h  Word.h  WordBuffer.h  main.cpp
Test/: CMakeLists.txt  main.cpp  main.cu
